force-app/main/default/objects/SBQQ__ConfigurationRule__c/SBQQ__ConfigurationRule__c.object-meta.xml
<CustomObject>
    <customHelpPage>SBQQ__ConfigurationRuleHelp</customHelpPage>
    <description>Links product-scoped Product Rules to specific bundle to validate correct configuration.</description>
    <label>Configuration Rule</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Rule #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuration Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>