force-app/main/default/objects/SBQQ__ConfigurationRule__c/fields/SBQQ__AscendingNestedLevel__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__AscendingNestedLevel__c</fullName>
        <description>Include parent bundle configuration with the specified level when evaluating this rule&apos;s conditions in the configurator for alert, validation and selection rules.</description>
        <inlineHelpText>Include parent bundle configuration with the specified level when evaluating this rule&apos;s conditions in the configurator for alert, validation and selection rules.</inlineHelpText>
        <label>Parent Bundle Condition Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>