force-app/main/default/objects/SBQQ__ConfigurationRule__c/fields/SBQQ__DescendingActionNesting__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DescendingActionNesting__c</fullName>
        <description>Allow child bundle configurations up to the specified level to be targeted by this rule&apos;s actions when executing in the configurator for selection rules only.</description>
        <inlineHelpText>Allow child bundle configurations up to the specified level to be targeted by this rule&apos;s actions when executing in the configurator for selection rules only.</inlineHelpText>
        <label>Child Bundle Action Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>