force-app/main/default/objects/SBQQ__ConfigurationRule__c/fields/SBQQ__Product__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Configured product to be validated by this rule.</description>
        <inlineHelpText>Select the configured product you want this rule to validate.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Configuration Rules</relationshipLabel>
        <relationshipName>ConfigurationRules</relationshipName>
        <type>Lookup</type>
    </CustomField>