force-app/main/default/objects/SBQQ__ConfigurationRule__c/fields/SBQQ__ProductFeature__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProductFeature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product feature validated by this rule.</description>
        <inlineHelpText>Select the product feature you want this rule to validate.</inlineHelpText>
        <label>Product Feature</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.SBQQ__Product__c</field>
                <operation>equals</operation>
                <valueField>SBQQ__ProductFeature__c.SBQQ__ConfiguredSKU__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__ProductFeature__c</referenceTo>
        <relationshipLabel>Configuration Rules</relationshipLabel>
        <relationshipName>Configuration_Rules</relationshipName>
        <type>Lookup</type>
    </CustomField>