force-app/main/default/objects/SBQQ__ConfigurationRule__c/fields/SBQQ__ProductRule__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProductRule__c</fullName>
        <description>The actual rule that defines logic used to validate product configuration.</description>
        <inlineHelpText>Select the product rule that contains the logic to validate your product configurations.</inlineHelpText>
        <label>Product Rule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SBQQ__ProductRule__c.SBQQ__Scope__c</field>
                <operation>equals</operation>
                <value>Product</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__ProductRule__c</referenceTo>
        <relationshipLabel>Configuration Rules</relationshipLabel>
        <relationshipName>ConfigurationRules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>