force-app/main/default/objects/SBQQ__ConfigurationRule__c/fields/SBQQ__RuleEvaluationEvent__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RuleEvaluationEvent__c</fullName>
        <description>Evaluation event of referenced rule.</description>
        <formula>TEXT(SBQQ__ProductRule__r.SBQQ__EvaluationEvent__c)</formula>
        <inlineHelpText>Specify when this rule should be evaluated.</inlineHelpText>
        <label>Rule Evaluation Event</label>
        <type>Text</type>
    </CustomField>