force-app/main/default/objects/SBQQ__ConfigurationRule__c/fields/SBQQ__RuleType__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RuleType__c</fullName>
        <description>Type of referenced rule. Convenience field to avoid querying related rule record.</description>
        <formula>TEXT(SBQQ__ProductRule__r.SBQQ__Type__c)</formula>
        <inlineHelpText>Type of product rule referenced by this configuration rule.</inlineHelpText>
        <label>Rule Type</label>
        <type>Text</type>
    </CustomField>