force-app/main/default/objects/SBQQ__ConfigurationRule__c/validationRules/SBQQ__Ensure_rule_type_nested_level_actions.validationRule-meta.xml
<ValidationRule>
        <fullName>SBQQ__Ensure_rule_type_nested_level_actions</fullName>
        <active>true</active>
        <description>Ensures the related Product Rule is of type Selection when specifying an action level.</description>
        <errorConditionFormula>(TEXT(SBQQ__ProductRule__r.SBQQ__Type__c) != null &amp;&amp; TEXT(SBQQ__ProductRule__r.SBQQ__Type__c) != &apos;Selection&apos;) &amp;&amp; (TEXT(SBQQ__DescendingActionNesting__c) != null)</errorConditionFormula>
        <errorMessage>Action Level only supported for Selection product rules.</errorMessage>
    </ValidationRule>